<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    tools:context=".fragments.fixture.FixtureDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/teamInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="220dp"
            tools:layout_editor_absoluteY="-43dp">

            <LinearLayout
                android:id="@+id/leagueLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/liveStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:background="@drawable/round_shape_match"
                        android:padding="2dp"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.444"
                        tools:text="Live" />

                    <TextView
                        android:id="@+id/leagueName"
                        android:layout_width="238dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/liveStatus"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="RtlSymmetry,TextSizeCheck"
                        tools:text="League Name" />

                    <TextView
                        android:id="@+id/countdown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.816"
                        app:layout_constraintStart_toEndOf="@+id/leagueName"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.4"
                        tools:ignore="RtlSymmetry"
                        tools:text="League Name" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/dateAndTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:text="Date Time" />

                    <TextView
                        android:id="@+id/matchRound"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry"
                        tools:text="League Name" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/team1Logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="4dp"
                android:layout_marginStart="4dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/leagueLinearLayout"
                app:layout_constraintTop_toBottomOf="@+id/leagueLinearLayout"
                app:layout_constraintVertical_bias="0.0" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/team1Logo"
                app:layout_constraintStart_toEndOf="@+id/team1Logo"
                app:layout_constraintTop_toTopOf="@+id/team1Logo">

                <TextView
                    android:id="@+id/team1Name"
                    android:layout_width="83dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:text="@string/team_one"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck" />

                <TextView
                    android:id="@+id/team1Score"
                    android:layout_width="83dp"
                    android:layout_height="18dp"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    tools:ignore="TextSizeCheck"
                    tools:text="team one" />
            </LinearLayout>

            <ImageView
                android:id="@+id/team2Logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="4dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/leagueLinearLayout"
                app:layout_constraintTop_toBottomOf="@+id/leagueLinearLayout"
                app:layout_constraintVertical_bias="0.0" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/team2Logo"
                app:layout_constraintEnd_toStartOf="@+id/team2Logo"
                app:layout_constraintTop_toTopOf="@+id/team2Logo">

                <TextView
                    android:id="@+id/team2Name"
                    android:layout_width="83dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck"
                    tools:text="team one" />

                <TextView
                    android:id="@+id/team2Score"
                    android:layout_width="83dp"
                    android:layout_height="18dp"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    tools:ignore="TextSizeCheck"
                    tools:text="team one" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/app_name"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
                app:layout_constraintStart_toEndOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="@+id/linearLayout"
                app:srcCompat="@drawable/baseline_swap_horiz_day"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/teamInfoTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teamInfo"
            app:tabGravity="center"
            app:tabMode="scrollable" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teamInfoTab">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/teamInfoViewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>